--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  go_router: ^14.8.0
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
 
 flutter:
   uses-material-design: true
