--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   flutter_riverpod: ^2.6.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
