--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   freezed: ^2.5.8
   json_serializable: ^6.9.4
+  mockito: ^5.4.5
 
 flutter:
   uses-material-design: true
